// protoc -I . task/task.proto --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative

syntax = "proto3";
package task;

option go_package = "/task";

service Task {
  rpc CreateTask(CreateTaskRequest) returns(TaskIDResponse) {}
  rpc GetTask(GetTaskRequest) returns(TaskIDResponse) {}
  rpc GetList(GetListRequest) returns(GetListResponse) {}
  rpc DeleteTask(DeleteTaskRequest) returns(TaskIDResponse) {}
  rpc DoneTask(DoneTaskRequest) returns(TaskIDResponse) {}
}

message CreateTaskRequest {
  int64 UserID = 1;
  string Title = 2;
  string Description = 3;
  bool Done = 4;
}

message GetTaskRequest {
  int64 UserID = 1;
  int64 TaskID = 2;
}

message GetListRequest {
  int64 UserID = 1;
}

message DeleteTaskRequest {
  int64 UserID = 1;
  int64 TaskID = 2;
}

message DoneTaskRequest {
  int64 UserID = 1;
  int64 TaskID = 2;
  bool Done = 3;
}

message GetListResponse {
  repeated Task Tasks = 1;

  message Task {
    int64 TaskID = 1;
    string Title = 2;
    string Description = 3;
    bool Done = 4;
  }
}

message TaskIDResponse {
  int64 TaskID = 1;
}